--- a/css/cart.css
+++ b/css/cart.css
@@ -60,7 +60,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .cart_container{
+  .cart_main_container{
     flex-direction: column;
     font-size: 0.8rem;
   }
