--- a/css/cart.css
+++ b/css/cart.css
@@ -37,7 +37,7 @@
 
 .cart_item {
   display: flex;
-  padding: 2rem;
+  padding: 1rem 0.7rem;
   margin: 1rem;
   border-radius: 1rem;
   border: 1px solid lightgrey;
@@ -63,6 +63,8 @@
   .cart_main_container{
     flex-direction: column;
     font-size: 0.8rem;
+    margin-right: 1rem;
+
   }
   
   .cart_container .item_desc{
