Added variables for color

--- a/css/cart.css
+++ b/css/cart.css
@@ -1,3 +1,9 @@
+:root{
+  --pricedetails_background :#f6f0fd;
+  --border_color: #808080;
+
+}
+
 .cart_container{
   text-align: center;
 }
@@ -10,7 +16,7 @@
 }
 
 .price_details_container{
-  background-color: rgb(246, 240, 253);
+  background-color: var(--pricedetails_background);
   padding: 2rem 2rem;
   width: 30rem;
   height: fit-content;
@@ -28,7 +34,7 @@
 .price_details_container h2{
   padding: 1rem 0;
   margin: 0.5rem 0;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid ;
 }
 
 .price_details_container p, h3{
@@ -40,7 +46,7 @@
   padding: 1rem 0.7rem;
   margin: 1rem;
   border-radius: 1rem;
-  border: 1px solid lightgrey;
+  border: 1px solid var(--border-color);
 }
 
 .cart_item img {
@@ -55,7 +61,7 @@
 }
 
 .secondary_outline_btn {
-  background-color: lightgrey;
+  background-color: var(--border-color);
   border: none;
 }
 
