--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,12 @@
 .home_center_img{
   position: relative;
+  width: 100%;
 }
 
-.home_center_img .img_responsive {
+.home_center_img .img_responsive{
   width: 80%;
-}
+} 
+
 
 .primary_solid_btn {
   font-size: 1.2rem;
@@ -91,6 +93,10 @@
 @media only screen and (max-width: 600px) {
   .heading {
     font-size: 0.8rem;
+  }
+
+  .home_center_img{
+    width: 100%;
   }
 
   .heading h1 {
