--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 @import url(./css/productlist.css);
 
 body{
-  margin: 1rem 10rem;
+  /* margin: 1rem 10rem; */
   text-align: center;
 }
 
@@ -15,7 +15,7 @@ body{
 }
 
 .homepage_container{
-  margin: 1rem 10rem;
+  margin: 1rem 5%;
 }
 
 .brand_title {
@@ -57,6 +57,7 @@ body{
   height: 3rem;
 }
 
+
 @media only screen and (max-width: 600px) {
 
   body{
@@ -72,6 +73,7 @@ body{
   .brand_title {
     margin-left: 0rem;
     margin-bottom: 1rem;
+    font-size: 1.5rem;
   }
 
   .brand_logo {
@@ -79,3 +81,4 @@ body{
   }
 
 }
+
