--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@
 @import url(./css/wishlist.css);
 
 body{
-  margin: 1rem 10rem;
   text-align: center;
 }
 
@@ -14,7 +13,7 @@ body{
 }
 
 .homepage_container{
-  margin: 1rem 10rem;
+  margin: 1rem 5%;
 }
 
 .brand_title {
