--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,5 @@
-.home_center_img .img_responsive {
+.home_center_img {
   position: relative;
-  width: 80%;
 }
 
 .primary_solid_btn {
@@ -35,11 +34,6 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-.category_grid img {
-  height: 100%;
-  object-fit: contain;
-  width: 100%;
-}
 
 .category {
   position: relative;
@@ -132,4 +126,13 @@
     padding: 0.5rem;
     margin-top: 1rem;
   }
+}
+
+
+@media only screen and (max-width: 900px) {
+
+  .content{
+    font-size: 0.7rem;
+  }
+
 }
