--- a/css/cart.css
+++ b/css/cart.css
@@ -51,7 +51,6 @@
 
 .cart_item img {
   max-height: 33rem;
-  
 }
 
 .cart_item .item_desc {
@@ -80,7 +79,7 @@
   .price_details_container{
     padding: 0.5rem;
     width: 70%;
-  font-size: 0.5rem
+    font-size: 0.5rem
   }
 
   .cart_item .item_desc{
@@ -91,6 +90,12 @@
 
   .cart_item{
     margin:1rem 0;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .cart_main_container{
+    flex-direction: column;
   }
 
 }
