--- a/css/home.css
+++ b/css/home.css
@@ -1,12 +1,6 @@
 .home_center_img{
   position: relative;
-  width: 100%;
 }
-
-.home_center_img .img_responsive{
-  width: 80%;
-} 
-
 
 .primary_solid_btn {
   font-size: 1.2rem;
@@ -38,12 +32,6 @@
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-
-.category_grid img {
-  height: 100%;
-  object-fit: contain;
-  width: 100%;
 }
 
 .category {
@@ -142,3 +130,12 @@
     margin-top: 1rem;
   }
 }
+
+@media only screen and (max-width: 900px) {
+
+  .content{
+    font-size: 0.7rem;
+  }
+
+}
+
