--- a/index.css
+++ b/index.css
@@ -6,7 +6,6 @@
 @import url(./css/signup.css);
 
 body{
-  margin: 1rem 10rem;
   text-align: center;
 
 }
@@ -16,7 +15,7 @@ body{
 }
 
 .home_container{
-  margin: 1rem 10rem;
+  margin: 1rem 5%;
 
 }
 
