--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,8 @@
+:root{
+  --border-color: rgb(128, 128, 128);
+  --background-color: rgb(255, 255, 255);
+}
+
 .footer_container h3 {
   margin-top: 2rem;
 }
@@ -5,11 +10,11 @@
 .footer_container {
   text-align: center;
   margin-top: 3rem;
-  border-top: 1px solid grey;
+  border-top: 1px solid var(--border-color);
 }
 
 .footer_icons {
-  background-color: white;
+  background-color: var(--background-color);
 }
 
 .footer_icons img {
