--- a/css/home.css
+++ b/css/home.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.img_responsive{
+  width: 70%;
+}
+
 
 .primary_solid_btn {
   font-size: 1.2rem;
@@ -35,11 +39,6 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-.category_grid img {
-  height: 100%;
-  object-fit: contain;
-  width: 100%;
-}
 
 .category {
   position: relative;
