--- a/css/signup.css
+++ b/css/signup.css
@@ -1,10 +1,10 @@
 body{
-  background-color: rgb(248, 248, 248);
+  background-color: var(--body-background);
 }
 
 :root{
   --background-color: rgb(255, 255, 255);
-
+  --body-background: rgb(248, 248, 248);
 }
 
 .signup_container{
