corrected link address for import link of cl style

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url("https://neodev-uii.netlify.app/doc/docstyle.css");
+@import url("https://neodev-ui.netlify.app/doc/docstyle.css");
 @import url(./css/home.css);
 @import url(./css/footer.css);
 @import url(./css/cart.css);
